--- a/public/snippets/api-command-palette.html
+++ b/public/snippets/api-command-palette.html
@@ -1,4 +1,4 @@
-<pre class="shiki" style="background-color: #0d1117"><code><span class="line"><span style="color: #FF7B72">import</span><span style="color: #C9D1D9"> { CommandPalette } </span><span style="color: #FF7B72">from</span><span style="color: #C9D1D9"> </span><span style="color: #A5D6FF">&#39;solid-command-palette&#39;</span><span style="color: #C9D1D9">;</span></span>
+<pre class="shiki" style="background-color: #0d1117"><code><span class="line"><span style="color: #FF7B72">import</span><span style="color: #C9D1D9"> { CommandPalette } </span><span style="color: #FF7B72">from</span><span style="color: #C9D1D9"> </span><span style="color: #A5D6FF">&#39;@cn-ui/command-palette&#39;</span><span style="color: #C9D1D9">;</span></span>
 <span class="line"></span>
 <span class="line"><span style="color: #C9D1D9">&lt;</span><span style="color: #7EE787">CommandPalette</span></span>
 <span class="line"><span style="color: #C9D1D9">  </span><span style="color: #8B949E">/* Placeholder for palette&#39;s search field */</span></span>
